--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "lfb.doc.tar.xz": cb77ebd9545ce4bcbdcbace6bbc3c36404aeb234
-  "lfb.tar.xz": ea8600bc6387a74618d4345f66ead17e861c6027
+  lfb.doc.r15878.tar.xz: 2ea7d8137a6bd74a1304c161233bc10e575006c9
+  lfb.r15878.tar.xz: f32424b1696713b55f6084b07d2a8fb608788fc2
